--- a/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
+++ b/Languages/Russian/DefInjected/ThoughtDef/Thoughts_Memory_Misc.xml
@@ -7,5 +7,8 @@
 	<Thought_AEForbiddenFruit.stages.4.description>Боится божественного гнева за получение знаний, не предназначенных для смертных.</Thought_AEForbiddenFruit.stages.4.description>
 	<Thought_AEForbiddenFruit.stages.5.label>Судный час</Thought_AEForbiddenFruit.stages.5.label>
 	<Thought_AEForbiddenFruit.stages.5.description>Молит о прощении за то, что вкусил запретный плод.</Thought_AEForbiddenFruit.stages.5.description>
+	
+	<Thought_AEFleshmassLung.stages.0.label>Стимуляция легких из биомассы</Thought_AEFleshmassLung.stages.0.label>
+	<Thought_AEFleshmassLung.stages.0.description>Чувство легкости в голове. Какое приятное ощущение.</Thought_AEFleshmassLung.stages.0.description>
   
 </LanguageData>
