--- a/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_AE_BodyPart.xml
@@ -3,6 +3,13 @@
 
 	<UnfinishedHealthItemAnomalyAE.label>заготовка аномальной части</UnfinishedHealthItemAnomalyAE.label>
 	<UnfinishedHealthItemAnomalyAE.description>Аномальная часть тела в процессе изготовления.</UnfinishedHealthItemAnomalyAE.description>
+	
+	
+
+	<AEForbiddenFruitImplant.label>имплант запретного знания</AEForbiddenFruitImplant.label>
+	<AEForbiddenFruitImplant.description>Аномальный имплант коры головного мозга, который поддерживает связь между сознанием носителя и сущностью, способствуя обмену знаниями и мыслями, не тревожа сущность.\n\nСоздан с использованием семян запретного плода познания, используя инновационную технологию, полученную из обширных знаний сущности. После извлечения семян плод утратил свои свойства по самовосстановлению.</AEForbiddenFruitImplant.description>
+	
+	
 
 	<AEGrinderStomach.label>желудок-измельчитель</AEGrinderStomach.label>
 	<AEGrinderStomach.description>Аномальный искусственный желудок, повторяющий структуру мясорубки. Внутренние лезвия измельчают любые посторонние органические предметы, превращая их в источник питательных веществ. У носителя практически нет шансов получить пищевое отравление, и он невосприимчив к некоторым заболеваниям желудка. Чтобы поддерживать себя, он будет поглощать больше питательных веществ из носителя. Этот органический металл обладает свойствами самовосстановления, самостоятельно устраняя повреждения. Он радикально превосходит свой биологический аналог по нескольким аспектам.</AEGrinderStomach.description>
