--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_BodyPart.xml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
 
+	<AEForbiddenFruitImplant.label>имплант запретного знания</AEForbiddenFruitImplant.label>
+	<AEForbiddenFruitImplant.description>Установленный аномальный имплант коры головного мозга, который поддерживает связь между сознанием носителя и сущностью, способствуя обмену знаниями и мыслями, не тревожа сущность.</AEForbiddenFruitImplant.description>
+	<AEForbiddenFruitImplant.labelNoun>имплант запретного знания</AEForbiddenFruitImplant.labelNoun>
+	
+	
+
 	<AEGrinderStomach.label>желудок-измельчитель</AEGrinderStomach.label>
 	<AEGrinderStomach.description>Установленный аномальный искусственный желудок, повторяющий структуру мясорубки. Внутренние лезвия измельчают любые посторонние органические предметы, превращая их в источник питательных веществ. У носителя практически нет шансов получить пищевое отравление, и он невосприимчив к некоторым заболеваниям желудка. Чтобы поддерживать себя, он будет поглощать больше питательных веществ из носителя. Этот органический металл обладает свойствами самовосстановления, самостоятельно устраняя повреждения. Он радикально превосходит свой биологический аналог по нескольким аспектам.</AEGrinderStomach.description>
 	<AEGrinderStomach.labelNoun>желудок-измельчитель</AEGrinderStomach.labelNoun>
