--- a/Languages/Russian/DefInjected/ThingDefs/Items_AE_ResearchNotes.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_AE_ResearchNotes.xml
@@ -13,6 +13,18 @@
 	
 	
 
+	<AE_ResearchNotesMGA.label>исследовательские заметки #MG01</AE_ResearchNotesMGA.label>
+	<AE_ResearchNotesMGA.description>Исследовательские заметки, связанные с аномалией. Их изучение может помочь разблокировать новые исследования аномалий.</AE_ResearchNotesMGA.description>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.activateDescString>Анализировать исследовательские заметки.</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.activateDescString>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.activateLabelString>Анализировать...</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.activateLabelString>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.completedLetter>Изучив исследовательские заметки, {PAWN_labelShort} приобрел необходимые знания для исследовательского проекта(ов) {RESEARCH}.\n\nТеперь ваши исследователи могут использовать исследовательские столы, чтобы начать изучение практического применения этой технологии.</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.completedLetter>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.completedLetterLabel>Изучены исследовательские заметки о симфонии вечной бойни: разблокировано исследование {RESEARCH}</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.completedLetterLabel>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.guiLabelString>Выберите кто должен анализировать это</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.guiLabelString>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.inspectString>Может быть проанализирован колонистом.</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.inspectString>
+	<AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.jobString>Анализирует исследовательскую заметку</AE_ResearchNotesMGA.comps.CompAnalyzableUnlockResearch.jobString>
+	
+	
+
 	<AE_ResearchNotesBLA.label>исследовательские заметки #BL01</AE_ResearchNotesBLA.label>
 	<AE_ResearchNotesBLA.description>Исследовательские заметки, связанные с аномалией. Их изучение может помочь разблокировать новые исследования аномалий.</AE_ResearchNotesBLA.description>
 	<AE_ResearchNotesBLA.comps.CompAnalyzableUnlockResearch.activateDescString>Анализировать исследовательские заметки.</AE_ResearchNotesBLA.comps.CompAnalyzableUnlockResearch.activateDescString>
