Fully added StudyNotepad except notes Added strings for interaction cooldown Organogenesis core added noun TL Ru

--- a/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
+++ b/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
@@ -16,5 +16,7 @@
 	<AE_EntityCodexEntry_BloodPuddle.label>странная лужа</AE_EntityCodexEntry_BloodPuddle.label>
 	
 	<AE_EntityCodexEntry_BloodLake.label>странное озеро</AE_EntityCodexEntry_BloodLake.label>
+	
+	<AE_EntityCodexEntry_StudyNotepad.label>жёлтый блокнот</AE_EntityCodexEntry_StudyNotepad.label>
 
 </LanguageData>
