--- a/Languages/Russian/DefInjected/ThingDefs/Items_AE_ResearchNotes.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Items_AE_ResearchNotes.xml
@@ -25,6 +25,18 @@
 	
 	
 
+	<AE_ResearchNotesBPA.label>исследовательские заметки #BP01</AE_ResearchNotesBPA.label>
+	<AE_ResearchNotesBPA.description>Исследовательские заметки, связанные с аномалией. Их изучение может помочь разблокировать новые исследования аномалий.</AE_ResearchNotesBPA.description>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.activateDescString>Анализировать исследовательские заметки.</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.activateDescString>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.activateLabelString>Анализировать...</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.activateLabelString>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.completedLetter>Изучив исследовательские заметки, {PAWN_labelShort} приобрел необходимые знания для исследовательского проекта(ов) {RESEARCH}.\n\nТеперь ваши исследователи могут использовать исследовательские столы, чтобы начать изучение практического применения этой технологии.</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.completedLetter>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.completedLetterLabel>Изучены исследовательские заметки о пироги пекутся сами: разблокировано исследование {RESEARCH}</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.completedLetterLabel>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.guiLabelString>Выберите кто должен анализировать это</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.guiLabelString>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.inspectString>Может быть проанализирован колонистом.</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.inspectString>
+	<AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.jobString>Анализирует исследовательскую заметку</AE_ResearchNotesBPA.comps.CompAnalyzableUnlockResearch.jobString>
+	
+	
+
 	<AE_ResearchNotesBLA.label>исследовательские заметки #BL01</AE_ResearchNotesBLA.label>
 	<AE_ResearchNotesBLA.description>Исследовательские заметки, связанные с аномалией. Их изучение может помочь разблокировать новые исследования аномалий.</AE_ResearchNotesBLA.description>
 	<AE_ResearchNotesBLA.comps.CompAnalyzableUnlockResearch.activateDescString>Анализировать исследовательские заметки.</AE_ResearchNotesBLA.comps.CompAnalyzableUnlockResearch.activateDescString>
